--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -3,6 +3,45 @@
 # Add steps that build, run tests, deploy, and more:
 # https://aka.ms/yaml
 
+- phase: dbt
+ 
+    queue:
+      name: CustomPool
+      demands: sh
+ 
+    steps:
+      - task: DownloadSecureFile@1
+        name: SettingProfile
+        displayName: Downloading Profile for Redshift
+        inputs:
+          secureFile: 'redshift-profiles.yml'
+      
+      - script: |
+          echo Installing $(SettingProfile.secureFilePath) to the ~/.dbt...
+          mkdir ~/.dbt
+          cp $(SettingProfile.secureFilePath) ~/.dbt/profiles.yml
+        displayName: Installing Profile for Redshift
+ 
+      - script: |
+          build_branch=$(Build.SourceBranchName)
+          pr_number=$(System.PullRequest.PullRequestId)
+          echo "##vso[task.setvariable variable=PR_NUMBER]$pr_number"
+          echo "##vso[task.setvariable variable=BUILD_BRANCH]$build_branch"
+        displayName: Setting build environment variables
+ 
+      - task: ms-devlabs.utilitytasks.task-Shellpp.Shell++@0
+        displayName: Run and test dbt
+        inputs:
+          type: FilePath
+          failOnStandardError: false
+          scriptPath: scripts/dbt-build.sh
+      
+      - task: PublishBuildArtifacts@1
+        displayName: Publish artifact - dbt
+        inputs:
+          pathToPublish: our-datamart
+          ArtifactName: our-datamart
+          
 trigger:
 - main
 
@@ -17,3 +56,5 @@ steps:
     echo Add other tasks to build, test, and deploy your project.
     echo See https://aka.ms/yaml
   displayName: 'Run a multi-line script'
+
+
